welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def fleur(c:Color){
	setCouleurBrosse(c:Color);
	baisseBrosse();
	leveBrosse();
	droite();avance();gauche();avance();
	baisseBrosse();
	leveBrosse();
	avance();gauche();avance();
	baisseBrosse();
	leveBrosse();
	avance();gauche();avance();
	baisseBrosse();
	leveBrosse();
	gauche();avance();
	setCouleurBrosse(Color.YELLOW);
	baisseBrosse();
	leveBrosse();
}
def growFlowers(){
	fleur(Color.RED);
	gauche();avance();avance();avance();
	fleur(Color.CYAN);
	avance();avance();avance();
	fleur(Color.GREEN);
	avance();avance();avance();
	fleur(Color.PINK);
	droite();avance();avance();gauche();avance();
	fleur(Color.ORANGE);	
	avance();avance();avance();
	fleur(Color.BLUE);
	gauche();avance();gauche();avance();avance();droite();
	leur(Color.RED);
	gauche();avance();avance();avance();
	fleur(Color.CYAN);
	avance();avance();avance();
	fleur(Color.GREEN);
	avance();avance();avance();
	fleur(Color.PINK);
	droite();avance();avance();gauche();avance();
	fleur(Color.ORANGE);
}
